Implemented cacheing method in ApiClientImdb class

--- a/html/index.html
+++ b/html/index.html
@@ -16,5 +16,6 @@
     <footer>
       <!-- footer content -->
     </footer>
+    <script type="module" src="../js/index.js"></script>
   </body>
 </html>
