--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,9 @@
     <title>FilmSamlaren</title>
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/spinner.css" />
     <link rel="stylesheet" href="../css/index.css" />
+    <script type="module" src="../js/index.js" defer></script>
   </head>
   <body>
     <header>
@@ -19,6 +21,5 @@
     <footer>
       <!-- footer content -->
     </footer>
-    <script type="module" src="../js/index.js"></script>
   </body>
 </html>
