MovieCard class to render movies, now just rendering the poster

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
     </header>
     <main>
       <!-- main content -->
+      <div id="movieCardContainer" class="movieCardContainer"></div>
     </main>
     <footer>
       <!-- footer content -->
