--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,25 @@
   <body>
     <header>
       <!-- header content -->
+      <a href="../html/index.html" title="Start page">
+        <img src="../res/images/logo.png" alt="Film Flicker" class="logo" />
+      </a>
+      <nav>
+        <ul>
+          <li>
+            <a href="../html/watchlist.html" title="Watchlist">
+              <img src="../res/icons/watchlist.svg" alt="watchlist" class="icon icon-scale" />
+              <p>Watchlist</p>
+            </a>
+          </li>
+          <li>
+            <a href="../html/moviequiz.html" title="Moviequiz">
+              <img src="../res/icons/quiz.svg" alt="moviequiz" class="icon icon-scale" />
+              <p>Movie quiz</p>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
       <!-- main content -->
