Simple hero section with an image of a livingroom and also add a hero welcome message

--- a/html/index.html
+++ b/html/index.html
@@ -42,6 +42,10 @@
     </header>
     <main>
       <!-- main content -->
+      <div class="heroContainer">
+        <img src="../res/images/hero.webp" alt="This calm living room features a plush red couch, a sleek television, and soft lighting, creating a serene ambiance perfect for relaxation and cozy gatherings" />
+        <h1>Discover your next movie for tonight in less than 1 minute 🍿</h1>
+      </div>
       <div id="movieCardContainer" class="movieCardContainer"></div>
     </main>
     <footer>
