Html structure for filterContainer with categories icon, search input and sort select

--- a/html/index.html
+++ b/html/index.html
@@ -46,6 +46,15 @@
         <img src="../res/images/hero.webp" alt="This calm living room features a plush red couch, a sleek television, and soft lighting, creating a serene ambiance perfect for relaxation and cozy gatherings" />
         <h1>Discover your next movie for tonight in less than 1 minute 🍿</h1>
       </div>
+
+      <div id="filterContainer" class="filterContainer">
+        <img src="../res/icons/categories.svg" alt="Chose categories" title="Chose categories" role="button" tabindex="0" id="categoriesBtn" class="categoriesBtn icon icon-scale" />
+        <input type="text" placeholder="Search movies" />
+        <select name="" id="">
+          <option value="">Sort movies</option>
+        </select>
+      </div>
+
       <div id="movieCardContainer" class="movieCardContainer"></div>
     </main>
     <footer>
