--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover your next movie today" />
     <title>FilmSamlaren</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/spinner.css" />
@@ -49,7 +50,14 @@
 
       <div id="filterContainer" class="filterContainer">
         <img src="../res/icons/categories.svg" alt="Chose categories" title="Chose categories" role="button" tabindex="0" id="categoriesBtn" class="categoriesBtn icon icon-scale" />
-        <input type="text" placeholder="Search movies" />
+        <!-- <input type="text" placeholder="Search movies" /> -->
+        <div class="searchBox">
+          <form class="searchForm">
+            <input id="searchInput" class="searchInput" placeholder="Search movies" autocomplete="off" />
+          </form>
+          <i class="fas fa-search"></i>
+        </div>
+
         <select name="" id="">
           <option value="">Sort movies</option>
         </select>
