Animated sort drop down

--- a/html/index.html
+++ b/html/index.html
@@ -58,9 +58,16 @@
           <i class="fas fa-search"></i>
         </div>
 
-        <select name="" id="">
+        <!-- <select name="" id="">
           <option value="">Sort movies</option>
-        </select>
+        </select> -->
+
+        <div class="sortBox">
+          <img src="../res/icons/sort.svg" alt="Sort movies" class="sortIcon icon" />
+          <div class="sortDropdown">
+            <ul id="sortOptions" class="sortOptions"></ul>
+          </div>
+        </div>
       </div>
 
       <div id="movieCardContainer" class="movieCardContainer"></div>
