Made the filter bar reponsive and add a box shawdow to make it pop

--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,8 @@
         <h1>Discover your next movie for tonight in less than 1 minute 🍿</h1>
       </div>
 
+      <h2 class="filterMessage">Find your next movie right here in the greatest movie library</h2>
+
       <div id="filterContainer" class="filterContainer">
         <img src="../res/icons/categories.svg" alt="Chose categories" title="Chose categories" role="button" tabindex="0" id="categoriesBtn" class="categoriesBtn icon icon-scale" />
         <div class="searchBox">
