Genre module working with toggling visibility

--- a/html/index.html
+++ b/html/index.html
@@ -58,13 +58,17 @@
           </form>
           <i class="fas fa-search"></i>
         </div>
-
         <div class="sortBox">
           <img src="../res/icons/sort.svg" alt="Sort movies" class="sortIcon icon" />
           <div class="sortDropdown">
             <ul id="sortOptions" class="sortOptions"></ul>
           </div>
         </div>
+      </div>
+
+      <div id="genresContainer" class="genresContainer hidden">
+        <img src="../res/icons/x.svg" alt="Hide genres" title="Hide genres" role="button" tabindex="0" id="hideGenresBtn" class="hideGenresBtn icon icon-scale" />
+        <ul id="genres" class="genres"></ul>
       </div>
 
       <div id="movieCardContainer" class="movieCardContainer"></div>
