Created a feeback function that tells the user of the search

--- a/html/index.html
+++ b/html/index.html
@@ -43,14 +43,14 @@
     </header>
     <main>
       <!-- main content -->
-      <div class="heroContainer">
+      <section class="heroContainer">
         <img src="../res/images/hero.webp" alt="This calm living room features a plush red couch, a sleek television, and soft lighting, creating a serene ambiance perfect for relaxation and cozy gatherings" />
         <h1>Discover your next movie for tonight in less than 1 minute 🍿</h1>
-      </div>
+      </section>
 
       <h2 class="filterMessage">Find your next movie right here in the greatest movie library</h2>
 
-      <div id="filterContainer" class="filterContainer">
+      <section id="filterContainer" class="filterContainer">
         <img src="../res/icons/categories.svg" alt="Chose categories" title="Chose categories" role="button" tabindex="0" id="categoriesBtn" class="categoriesBtn icon icon-scale" />
         <div class="searchBox">
           <form class="searchForm">
@@ -64,7 +64,8 @@
             <ul id="sortOptions" class="sortOptions"></ul>
           </div>
         </div>
-      </div>
+        <p id="filterMessage" class="filterMessage"></p>
+      </section>
 
       <div id="genresContainer" class="genresContainer hidden">
         <img src="../res/icons/x.svg" alt="Hide genres" title="Hide genres" role="button" tabindex="0" id="hideGenresBtn" class="hideGenresBtn icon icon-scale" />
