--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -43,6 +43,7 @@
     </header>
     <main>
       <!-- main content -->
+      <section id="watchlist" class="watchlist"></section>
     </main>
     <footer>
       <!-- footer content -->
