--- a/html/index.html
+++ b/html/index.html
@@ -17,19 +17,19 @@
     <header>
       <!-- header content -->
       <a href="../html/index.html" title="Start page">
-        <img src="../res/images/logo.png" alt="Film Flicker" class="logo" />
+        <img src="../res/images/logo.png" alt="Navigate to start page" class="logo" />
       </a>
       <nav>
         <ul id="navUl" class="navUl">
           <li>
             <a href="../html/watchlist.html" title="Watchlist">
-              <img src="../res/icons/watchlist.svg" alt="watchlist" class="icon icon-scale" />
+              <img src="../res/icons/watchlist.svg" alt="Navigate to watchlist page" class="icon icon-scale" />
               <p>Watchlist</p>
             </a>
           </li>
           <li>
             <a href="../html/moviequiz.html" title="Moviequiz">
-              <img src="../res/icons/quiz.svg" alt="moviequiz" class="icon icon-scale" />
+              <img src="../res/icons/quiz.svg" alt="Navigate to moviequiz page" class="icon icon-scale" />
               <p>Movie quiz</p>
             </a>
           </li>
