Simple footer with copyright and socials icons

--- a/html/moviequiz.html
+++ b/html/moviequiz.html
@@ -14,7 +14,12 @@
       <!-- main content -->
     </main>
     <footer>
-      <!-- footer content -->
+      <p id="copyright" class="copyright">&copy;2024</p>
+      <section id="socials" class="socials">
+        <a href="#"><img class="social" src="../res/icons/instagram.svg" alt="Visit Film Nest's Instagram" title="Vist Film Nest's Instagram" /></a>
+        <a href="#"><img class="social" src="../res/icons/facebook.svg" alt="Visit Film Nest's Facebook" title="Vist Film Nest's Facebook" /></a>
+        <a href="#"><img class="social" src="../res/icons/twitter.svg" alt="Visit Film Nest's Twitter" title="Vist Film Nest's Twitter" /></a>
+      </section>
     </footer>
   </body>
 </html>
