--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -15,7 +15,6 @@
   </head>
   <body>
     <header>
-      <!-- header content -->
       <a href="../html/index.html" title="Start page">
         <img src="../res/images/logo.png" alt="Film Flicker" class="logo" />
       </a>
@@ -42,11 +41,15 @@
       </div>
     </header>
     <main>
-      <!-- main content -->
       <section id="watchlist" class="watchlist"></section>
     </main>
     <footer>
-      <!-- footer content -->
+      <p id="copyright" class="copyright">&copy;2024</p>
+      <section id="socials" class="socials">
+        <a href="#"><img class="social" src="../res/icons/instagram.svg" alt="Visit Film Nest's Instagram" title="Vist Film Nest's Instagram" /></a>
+        <a href="#"><img class="social" src="../res/icons/facebook.svg" alt="Visit Film Nest's Facebook" title="Vist Film Nest's Facebook" /></a>
+        <a href="#"><img class="social" src="../res/icons/twitter.svg" alt="Visit Film Nest's Twitter" title="Vist Film Nest's Twitter" /></a>
+      </section>
     </footer>
   </body>
 </html>
