Fething and rendering of movies

--- a/html/moviequiz.html
+++ b/html/moviequiz.html
@@ -42,17 +42,18 @@
     </header>
     <main>
       <section id="movieQuiz" class="movieQuiz">
-        <div id="genres" class="genres">
-          <h2 id="genreHeader" class="genreHeader">Selected genres</h2>
+        <div id="genres" class="genres category">
+          <h2 id="genreHeader" class="genreHeader categoryHeader">Selected genres</h2>
         </div>
-        <div id="seasons" class="seasons">
-          <h2 id="seasonHeader" class="seasonHeader">Selected season</h2>
+        <div id="seasons" class="seasons category">
+          <h2 id="seasonHeader" class="seasonHeader categoryHeader">Selected season</h2>
         </div>
-        <div id="interests" class="interests">
-          <h2 id="interestsHeader" class="interestsHeader">Select themes</h2>
+        <div id="themes" class="themes category">
+          <h2 id="themesHeader" class="themesHeader categoryHeader">Select themes</h2>
         </div>
       </section>
       <button id="generateMovies" class="generateMovies btn">Generate</button>
+      <div id="movies" class="movies"></div>
     </main>
     <footer>
       <p id="copyright" class="copyright">&copy;2024</p>
