Improved accessiblity accross all pages

--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -41,7 +41,7 @@
       </div>
     </header>
     <main>
-      <section id="watchlist" class="watchlist"></section>
+      <ul id="watchlist" class="watchlist"></ul>
     </main>
     <footer>
       <p id="copyright" class="copyright">&copy;2024</p>
