Created an api client class for claude api using axios, utilized it by implementing a random movies btn

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/spinner.css" />
     <link rel="stylesheet" href="../css/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="../js/script.js" defer></script>
     <script type="module" src="../js/index.js" defer></script>
   </head>
@@ -64,6 +65,8 @@
         </div>
         <p id="filterMessage" class="filterMessage"></p>
       </section>
+
+      <button id="surprise" class="surprise btn">Movie night surprise</button>
 
       <div id="genresContainer" class="genresContainer hidden">
         <img src="../res/icons/x.svg" alt="Hide genres" title="Hide genres" role="button" tabindex="0" id="hideGenresBtn" class="hideGenresBtn icon icon-scale" />
