--- a/html/moviequiz.html
+++ b/html/moviequiz.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/spinner.css" />
     <link rel="stylesheet" href="../css/moviequiz.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="../js/script.js" defer></script>
     <script type="module" src="../js/moviequiz.js" defer></script>
   </head>
