All pages scoring 100 in accessibility

--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -16,20 +16,20 @@
   <body>
     <header>
       <a href="../html/index.html" title="Start page">
-        <img src="../res/images/logo.png" alt="Film Flicker" class="logo" />
+        <img src="../res/images/logo.png" alt="Film Flicker Logo" class="logo" />
       </a>
       <nav>
         <ul id="navUl" class="navUl">
           <li>
             <a href="../html/watchlist.html" title="Watchlist">
-              <img src="../res/icons/watchlist.svg" alt="watchlist" class="icon icon-scale" />
+              <img src="../res/icons/watchlist.svg" alt="Watchlist Icon" class="icon icon-scale" />
               <p>Watchlist</p>
             </a>
           </li>
           <li>
-            <a href="../html/moviequiz.html" title="Moviequiz">
-              <img src="../res/icons/quiz.svg" alt="moviequiz" class="icon icon-scale" />
-              <p>Movie quiz</p>
+            <a href="../html/moviequiz.html" title="Movie Quiz">
+              <img src="../res/icons/quiz.svg" alt="Quiz Icon" class="icon icon-scale" />
+              <p>Movie Quiz</p>
             </a>
           </li>
         </ul>
