--- a/html/index.html
+++ b/html/index.html
@@ -72,7 +72,7 @@
         <ul id="genres" class="genres"></ul>
       </div>
 
-      <div id="movieCardContainer" class="movieCardContainer"></div>
+      <div id="movieCardContainer" class="movieContainer"></div>
     </main>
     <footer>
       <p id="copyright" class="copyright">&copy;2025</p>
