--- a/html/moviequiz.html
+++ b/html/moviequiz.html
@@ -54,7 +54,7 @@
         </div>
       </section>
       <button id="generateMovies" class="generateMovies btn">Generate</button>
-      <div id="movies" class="movies"></div>
+      <div id="movies" class="movies movieContainer"></div>
     </main>
     <footer>
       <p id="copyright" class="copyright">&copy;2025</p>
