--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -41,7 +41,7 @@
       </div>
     </header>
     <main>
-      <ul id="watchlist" class="watchlist"></ul>
+      <ul id="watchlist" class="watchlist movieContainer"></ul>
     </main>
     <footer>
       <p id="copyright" class="copyright">&copy;2025</p>
